syntax = "proto3";
package bhmetapb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/deepfabric/prophet/pb/metapb/metapb.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_enum_prefix_all) = true;

// StoreIdent store ident
message StoreIdent {
    uint64 clusterID = 1;
    uint64 storeID   = 2;
}

// Cluster the cluster info
message Cluster {
    uint64 id          = 1 [(gogoproto.customname) = "ID"];
    uint32 maxReplicas = 2;
}

// Shard a shard [start,end) of the data
message Shard {
    uint64                id              = 1 [(gogoproto.customname) = "ID"];
    bytes                 start           = 2;
    bytes                 end             = 3;
    metapb.ResourceEpoch  epoch           = 4 [(gogoproto.nullable) = false];
    repeated metapb.Peer  peers           = 5 [(gogoproto.nullable) = false];
    bool                  disableSplit    = 6;
    uint64                group           = 7;
    bytes                 data            = 8;
    uint32                leastReplicas   = 9;
    bool                  dataAppendToMsg = 10;
}

// Store the host store metadata
message Store {
    uint64                id                = 1 [(gogoproto.customname) = "ID"];
    string                raftAddr          = 2;
    string                clientAddr        = 3;
    repeated metapb.Pair  labels            = 4 [(gogoproto.nullable) = false];
    metapb.ContainerState state             = 5;
    int64                 startTime         = 6;
    int64                 lastHeartbeatTime = 7;
    string                version           = 8;
    string                gitHash           = 9;
    string                deployPath        = 10;
}
